Fix spacing bug with floating tables

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -208,6 +208,7 @@ footer{
 
 .questionGroup{
     margin: 1em auto;
+    clear: both;
 }
 
 .right{
